deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choresync-web
spec:
  selector:
    app: choresync-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
